// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components / Container > should render container with the given tag 1`] = `
<body>
  <div>
    <section
      class="container"
    >
      Test
    </section>
  </div>
</body>
`;

exports[`components / Container > should render correctly 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      Test
    </div>
  </div>
</body>
`;
